# enhabitz

./: README.md  package.json  seed.sql  svelte.config.js  vite.config.js
.github/workflows/: release.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/lib/: date.ts  db.ts  notifications.ts  platform.ts  theme.svelte.ts  types.ts  visibility.svelte.ts
src/lib/components/: HabitForm.svelte
src/lib/components/habits/: CounterHabit.svelte  CounterTimerHabit.svelte  TimerHabit.svelte  TodoHabit.svelte
src/lib/components/nav/: DesktopNav.svelte  MobileNav.svelte  nav-items.ts
src/lib/components/today/: WeekStrip.svelte
src/lib/habits/: counter-timer.ts  counter.ts  derived.svelte.ts  history.svelte.ts  index.ts  manage.ts  schedule.ts  state.svelte.ts  stats.ts  timer.ts  todo.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/habits/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/widget/: +page.svelte
