[package]
name = "enhabitz"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enhabitz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = "0.4.44"
uuid = { version = "1.23.3", features = ["v4"] }

# Tray icon and global shortcuts aren't concepts on mobile (see lib.rs's
# #[cfg(desktop)] gates) — keeping these crates out of the Android/iOS
# dependency graph entirely avoids compiling and linking their native
# platform backends into the APK for functionality that can never run there.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Smaller/leaner binary: less to page into memory at cold start, smaller APK.
# panic = "abort" is safe here — nothing in this crate uses catch_unwind, all
# error paths go through Result. opt-level = "z" trades a bit of runtime
# speed for size; this app is IPC/SQLite-bound rather than CPU-bound, so size
# (and the disk-I/O/memory cost that comes with it) is the better trade for
# an app whose top metric is idle battery/resource footprint, not throughput.
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

